[project]
name = "queai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "google-genai>=1.29.0",
  "ipython>=9.4.0",
  "langchain-community>=0.3.27",
  "langchain-tavily>=0.2.10",
  "langchain[google-genai]>=0.3.26",
  "langgraph>=0.5.3",
  "pillow>=11.3.0",
  "wikipedia>=1.4.0",
]
